added cit folder (Continuous Integation Testing; moved metadata tables dir to config for CIT testing option

--- a/config.ini
+++ b/config.ini
@@ -12,3 +12,7 @@ ROOTDIR = /koadata32
 EMAIL = email
 SERVER = server
 DIR = dir
+
+[MISC]
+#METADATA_TABLES_DIR = /kroot/archive/tables
+METADATA_TABLES_DIR = ./cit/metadata_tables
