added dep locate dir override to config

--- a/config.ini
+++ b/config.ini
@@ -1,18 +1,27 @@
 [INFO]
 DQA_VERSION = 0.0.0
 
+
 [API]
 KOAAPI = URL/koa.php?
 TELAPI = URL/telSchedule.php?
 
+
 [NIRES]
 ROOTDIR = /koadata32
+
 
 [KOAXFR]
 EMAIL = email
 SERVER = server
 DIR = dir
 
+
 [MISC]
 #METADATA_TABLES_DIR = /kroot/archive/tables
 METADATA_TABLES_DIR = ./cit/metadata_tables
+
+
+[CIT]
+#Override hard-coded instrument FITS storage dirs.  Uncomment for testing.
+#CIT_LOCATE_DIR = ./cit/fits_files
