modtime override and admin report email options

--- a/config.ini
+++ b/config.ini
@@ -23,5 +23,12 @@ METADATA_TABLES_DIR = ./cit/metadata_tables
 
 
 [CIT]
-#Override hard-coded instrument FITS storage dirs.  Uncomment for testing.
-#CIT_LOCATE_DIR = ./cit/fits_files
+##Override hard-coded instrument FITS storage dirs. 
+#LOCATE_DIR = ./cit/fits_files
+##Override modtime check on FITS file find step.
+#LOCATE_MODTIME_OVERRIDE = 0
+
+
+[REPORT]
+##Where to send koa processing notification/error emails
+ADMIN_EMAIL = email
