moved keyword format file to own dir; fixed small FRAMENUM issue

--- a/config.ini
+++ b/config.ini
@@ -22,8 +22,7 @@ DIR = dir
 
 
 [MISC]
-#METADATA_TABLES_DIR = /kroot/archive/tables
-METADATA_TABLES_DIR = ./cit/metadata_tables
+METADATA_TABLES_DIR = ./metadata
 
 
 [CIT]
