--- a/config.ini
+++ b/config.ini
@@ -15,6 +15,10 @@ TELAPI = URL/telSchedule.php?
 ROOTDIR = /koadata32
 
 
+[MOSFIRE]
+ROOTDIR = /koadata21
+
+
 [KOAXFR]
 EMAIL = email
 SERVER = server
