Updated DEP version; Added REPROCESS config var; Renamed the CIT block to LOCATE and changed the vars LOCATE_DIR to SEARCH_DIR and LOCATE_MODTIME_OVERRIDE to MODTIME_OVERRIDE

--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@ DEV = 1
 
 
 [INFO]
-DEP_VERSION = 0.1.2
+DEP_VERSION = 0.1.4
 
 
 [API]
@@ -27,13 +27,12 @@ DIR = dir
 
 [MISC]
 METADATA_TABLES_DIR = ./metadata
+#REPROCESS = 0
 
 
-[CIT]
-##Override hard-coded instrument FITS storage dirs. 
-#LOCATE_DIR = ./cit/fits_files
-##Override modtime check on FITS file find step.
-#LOCATE_MODTIME_OVERRIDE = 0
+[LOCATE]
+#SEARCH_DIR = ./cit/fits_files
+#MODTIME_OVERRIDE = 1
 
 
 [REPORT]
