update to 0.2.0 and added nirspec and osiris sections

--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@ DEV = 1
 
 
 [INFO]
-DEP_VERSION = 0.1.4
+DEP_VERSION = 0.2.0
 
 
 [API]
@@ -18,7 +18,14 @@ ROOTDIR = /koadata32
 ROOTDIR = /koadata29
 
 [MOSFIRE]
-ROOTDIR = /koadata21
+ROOTDIR = /koadata34
+
+[NIRSPEC]
+ROOTDIR = /koadata35
+
+[OSIRIS]
+ROOTDIR = /koadata23
+
 
 
 [KOAXFR]
