--- a/config.ini
+++ b/config.ini
@@ -20,6 +20,12 @@ ROOTDIR = /koadata29
 [MOSFIRE]
 ROOTDIR = /koadata21
 
+[NIRSPEC]
+ROOTDIR = /koadata35
+
+[OSIRIS]
+ROOTDIR = /koadata23
+DRP = command
 
 [KOAXFR]
 EMAIL = email
