--- a/config.ini
+++ b/config.ini
@@ -25,13 +25,10 @@ ROOTDIR = /koadata35
 
 [OSIRIS]
 ROOTDIR = /koadata23
+DRP = command
 
-
-[NIRSPEC]
-ROOTDIR = /koadata35
-
-[OSIRIS]
-ROOTDIR = /koadata23
+[NIRC2]
+ROOTDIR = /koadata11
 DRP = command
 
 [KOAXFR]
