config update, cleanup

--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@ DEV = 1
 
 
 [INFO]
-DEP_VERSION = 0.2.0
+DEP_VERSION = 0.2.2
 
 
 [API]
@@ -11,14 +11,25 @@ KOAAPI = URL/koa.php?
 TELAPI = URL/telSchedule.php?
 
 
-[NIRES]
-ROOTDIR = /koadata32
-
 [ESI]
 ROOTDIR = /koadata36
 
+[HIRES]
+ROOTDIR = /koadata13
+
+[LRIS]
+ROOTDIR = /koadata27
+
 [MOSFIRE]
 ROOTDIR = /koadata34
+
+[NIRC2]
+ROOTDIR = /koadata11
+DRP = command
+TRS = command
+
+[NIRES]
+ROOTDIR = /koadata32
 
 [NIRSPEC]
 ROOTDIR = /koadata35
@@ -27,9 +38,6 @@ ROOTDIR = /koadata35
 ROOTDIR = /koadata23
 DRP = command
 
-[NIRC2]
-ROOTDIR = /koadata11
-DRP = command
 
 [KOAXFR]
 EMAIL = email
