Changed config to yaml and added db_conn for direct querying

--- a/config.ini
+++ b/config.ini
@@ -1,69 +1,95 @@
-[RUNTIME]
-DEV = 1
+RUNTIME: {
+  DEV: 1
+}
 
+INFO: {
+  DEP_VERSION: '0.2.5'
+}
 
-[INFO]
-DEP_VERSION = 0.2.3
+DATABASE: {
+  keckOperations: {
+    server : "",
+    user   : "",
+    pwd    : "",
+    port   : 0,
+    type   : ""
+  },
+  koa: {
+    server : "",
+    user   : "",
+    pwd    : "",
+    port   : 0,
+    type   : ""
+  }
+}
 
+API: {
+  KOAAPI:  'URL/koa.php?',
+  TELAPI:  'URL/telSchedule.php?',
+  PROPAPI: 'URL/proposalsAPI.php?',
+}
 
-[KOADB]
-HOST = 
-USER = 
-PWD = 
-DB = 
+DEIMOS: {
+  ROOTDIR: '/koadata39'
+}
 
-[API]
-KOAAPI = URL/koa.php?
-TELAPI = URL/telSchedule.php?
-PROPAPI = URL/proposalsAPI.php?
+ESI: {
+  ROOTDIR: '/koadata36'
+}
 
-[ESI]
-ROOTDIR = /koadata36
+HIRES: {
+  ROOTDIR: '/koadata13'
+}
 
-[HIRES]
-ROOTDIR = /koadata13
+KCWI: {
+  ROOTDIR: '/koadata28/'
+}
 
-[LRIS]
-ROOTDIR = /koadata27
+LRIS: {
+  ROOTDIR: '/koadata27/test'
+}
 
-[KCWI]
-ROOTDIR = /koadata28
+MOSFIRE: {
+  ROOTDIR: '/koadata34'
+}
 
-[MOSFIRE]
-ROOTDIR = /koadata34
+NIRC2: {
+  ROOTDIR: '/koadata11',
+  DRP: 'command',
+  TRS: 'command'
+}
 
-[NIRC2]
-ROOTDIR = /koadata11
-DRP = command
-PSFR = command
+NIRES: {
+  ROOTDIR: '/koadata32'
+}
 
-[NIRES]
-ROOTDIR = /koadata32
+NIRSPEC: {
+  ROOTDIR: '/koadata35'
+}
 
-[NIRSPEC]
-ROOTDIR = /koadata35
+OSIRIS: {
+  ROOTDIR: '/koadata23',
+  DRP: 'command'
+}
 
-[OSIRIS]
-ROOTDIR = /koadata23
-DRP = command
+KOAXFR: {
+  EMAILTO: '',
+  EMAILFROM: '',
+  EMAILERROR: '',
+  SERVER: '',
+  ACCOUNT: '',
+  DIR: '',
+}
 
+MISC: {
+  METADATA_TABLES_DIR: './metadata'
+}
 
-[KOAXFR]
-EMAIL = email
-SERVER = server
-DIR = dir
+LOCATE: {
+  #SEARCH_DIR: './cit/fits_files',
+  #MODTIME_OVERRIDE: 1
+}
 
-
-[MISC]
-METADATA_TABLES_DIR = ./metadata
-#REPROCESS = 0
-
-
-[LOCATE]
-#SEARCH_DIR = ./cit/fits_files
-#MODTIME_OVERRIDE = 1
-
-
-[REPORT]
-##Where to send koa processing notification/error emails
-ADMIN_EMAIL = email
+REPORT: {
+  ADMIN_EMAIL: ''
+}
