--- a/config.ini
+++ b/config.ini
@@ -26,7 +26,7 @@ DATABASE: {
 API: {
   TELAPI:  'URL/telSchedule.php?',
   PROPAPI: 'URL/proposalsAPI.php?',
-  INGESTAPI: 'IPAC_URL?',
+  INGESTAPI: 'IPAC_URL?'
 }
 
 DEIMOS: {
