Added script for automating PSFR transfer.

--- a/config.ini
+++ b/config.ini
@@ -26,6 +26,7 @@ DATABASE: {
 API: {
   TELAPI:  'URL/telSchedule.php?',
   PROPAPI: 'URL/proposalsAPI.php?',
+  KOAAPI:  'URL/koaAPI.php?',
   INGESTAPI: 'IPAC_URL?'
 }
 
@@ -55,8 +56,9 @@ MOSFIRE: {
 
 NIRC2: {
   ROOTDIR: '/koadata11',
-  DRP: 'command',
-  TRS: 'command'
+  DRP:      '',
+  PSFR:     ''
+  PSFR_XFR: ''
 }
 
 NIRES: {
